@@ -2,6 +2,5 @@ Makefile
 Makefile.md5
 *.d
 ?*.cvsignore*
-mvatom
-mvatom_version.h
+dirlist_version.h
 dirlist
