@@ -1,1 +1,4 @@
-dirlist now has options -r to recurse subdirectories.
+Bugfix: Stat of files now possible.
+Option -e added for better shell compatibility.
+
+This is a standalone version, previous versions were part of mvatom.
