@@ -22,6 +22,9 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
+# Revision 1.4  2010-06-01 23:51:17  tino
+# Standalone version, slightly improved with option -e
+#
 # Revision 1.3  2008-05-07 15:12:17  tino
 # dirlist added
 #
@@ -31,11 +34,11 @@
 # Revision 1.1  2006/07/22 23:47:58  tino
 # First version for testing
 
-      PROGS=mvatom dirlist
+      PROGS=dirlist
        OBJS=
 # Additional (fixed) installs for
 # bin sbin lib etc man share/man inf share/inf respectively
- INSTALLBIN=cmpanddel.sh
+ INSTALLBIN=
 INSTALLSBIN=
  INSTALLLIB=
  INSTALLETC=
