@@ -1,116 +1,0 @@
-# $Header$
-#
-# Minimal unit tests for mvatom
-#
-# $Log$
-# Revision 1.2  2008-05-28 14:47:56  tino
-# Option -c
-#
-# Revision 1.1  2008-05-21 17:59:55  tino
-# Dist
-
-file	1	A
-run	mvatom -ab A
-RUN	0
-FILE	1	A.~1~
-
-file	1	A
-run	mvatom -b A
-RUN	1	mvatom error: Option -d not present: Rename needs 2 arguments; For 'move away' now use options -ab
-FILE	1	A
-
-file	1	A
-run	mvatom -ab A A
-RUN	1	mvatom error: Options -a and -b cannot be used together this way
-FILE	1	A
-
-dir	A
-file	1	A/B
-run	mvatom A B
-RUN	0
-FILE	1	B/B
-DIR	B
-
-dir	A
-file	1	A/B
-run	mvatom -pp A/B B/C/D
-RUN	0
-DIR	A
-FILE	1	B/C/D
-DIR	B/C
-DIR	B
-
-file	1	A
-file	2	B
-file	3	C
-run	mvatom -b A B C
-RUN	1	mvatom error: Option -d not present: Rename needs 2 arguments; For 'move away' now use options -ab
-FILE	1	A
-FILE	2	B
-FILE	3	C
-
-file	1	A
-file	2	B
-file	3	C
-run	mvatom -bd C A B
-RUN	1	mvatom error: existing destination not a directory: C
-FILE	1	A
-FILE	2	B
-FILE	3	C
-
-file	1	A
-file	2	B
-file	3	C
-dir	D
-run	mvatom -bd D A B C
-RUN	0
-FILE	1	D/A
-FILE	2	D/B
-FILE	3	D/C
-DIR	D
-
-file	1	A
-file	2	B
-file	3	C
-run	mvatom -b A B
-RUN	0
-run	mvatom -b B.~1~ C
-RUN	0
-run	mvatom -b B C
-RUN	0
-FILE	1	C
-FILE	2	C.~2~
-FILE	3	C.~1~
-
-file	1	A
-file	2	B
-file	3	C
-run	mvatom -a A B
-RUN	0
-run	mvatom -a B.~1~ C
-RUN	0
-run	mvatom -a B C
-RUN	0
-FILE	1	C.~1~
-FILE	2	C.~2~
-FILE	3	C
-
-file	1	A
-file	2	B
-file	3	C
-file	4	D
-dir	E
-# Move B to backup (as E/B) and A renamed to B
-run	mvatom -bc E A B
-RUN	0
-# C moved to B and thus C backupped to E/B.~1~
-run	mvatom -ac E C B
-RUN	0
-# B (former A) moved to D and thus backupped to E/D
-run	mvatom -ac E B D
-RUN	0
-FILE	1	E/D
-FILE	2	E/B
-FILE	3	E/B.~1~
-FILE	4	D
-DIR	E
